--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,12 +7,12 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      -uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '14.x'
       - name: Build web-app
         run: |
           npm ci
